# gtk-nop

./: Makefile.am  configure.ac
debian/: changelog  control  copyright
src/: Makefile.am  gtk-nop.c
